--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -33,8 +33,11 @@ $gray            : lighten($base-gray, 61%);
 $gray-dark       : #595959;
 $gray-darker     : #2c2c2c;
 
+$sidebar-bg      : $purple;
+$sidebar-active  : #0B6B77;
 $text-color      : $gray-dark;
 
+$border-gray     : $gray-light;
 // Font Settings
 $font-primary            : 'GT Walsheim', Helvetica, Arial, sans-serif;
 $font-secondary          : Scala, Helvetica, Arial, sans-serif;
@@ -58,8 +61,8 @@ $line-height-base        : round($font-size-base * $baseLineHeight);  //26px
 $line-height-small       : $line-height-base*.75/$font-size-small; // 18/14
 
 $line-height-h1          : $line-height-base*2/$font-size-h1;
-$line-height-h2          : $line-height-base*1.75/$font-size-h2;
-$line-height-h3          : $line-height-base*1.25/$font-size-h3;
+$line-height-h2          : $line-height-base*1.5/$font-size-h2;
+$line-height-h3          : $line-height-base/$font-size-h3;
 $line-height-h4          : $line-height-base/$font-size-h4;
 $line-height-h5          : $line-height-base/$font-size-h5;
 
