--- a/sass/components/_addthis.scss
+++ b/sass/components/_addthis.scss
@@ -46,5 +46,8 @@
     top: 0;
     //@include rem(top, $font-size-h1);
     margin-left: em($horz-spacing-unit);
+    .panel-page & {
+      top: em($vert-spacing-unit);
+    }
   }
 }
