--- a/sass/components/_sidebars.scss
+++ b/sass/components/_sidebars.scss
@@ -14,13 +14,13 @@
     > a {
       display: block;
       padding: em($vert-spacing-unit/2) em($horz-spacing-unit);
-      background: $salmon;
+      background: $sidebar-bg;
       @include link-colors(white, white, white, white, white);
       border-bottom: 1px solid white;
       &:hover,
       &.active,
-      .active-trail {
-       background: $link-color-hover;
+      &.active-trail {
+       background: $sidebar-active;
        text-decoration: none;
       }
       font-size: em(18px);
