--- a/sass/components/_views.scss
+++ b/sass/components/_views.scss
@@ -1,4 +1,11 @@
 .view {
+  .views-exposed-form .views-exposed-widget .form-submit,
+  button,
+  input[type="button"],
+  input[type="reset"],
+  input[type="submit"] {
+    margin-top: 0;
+  }
 
   .views-row {
     h2 {
@@ -12,6 +19,9 @@
     .views-row {
       margin-bottom: em($vert-spacing-unit);
     }
+  }
+  &.view-repository-locations {
+    margin-bottom: em($section-spacing);
   }
   &.features-list {
     .item-list ul {
@@ -82,7 +92,7 @@
     @extend %clearfix;
   }
   @include breakpoint($tab) {
-    .exhibit-thumbnail {
+    .thumbnail {
       margin: 0 em($vert-spacing-unit/2) 0 0;
       min-width: 25%;
       text-align: left;
@@ -222,3 +232,6 @@
  }
 }
 
+.pane-survey-records-panel-pane-2 {
+  margin-top: em($section-spacing);
+}
