--- a/css/layouts/baseline/baseline.layout.css
+++ b/css/layouts/baseline/baseline.layout.css
@@ -37,7 +37,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 1400px; }
-  /* line 12, ../../../../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
+  /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
   .default-page .l-main:after,
   .page-taxonomy .l-main:after,
   .pane-edan-search-search-form:after,
@@ -126,7 +126,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 1400px; }
-    /* line 12, ../../../../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
+    /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
     .l-header .l-container:after {
       content: " ";
       display: block;
@@ -207,7 +207,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 1400px; }
-    /* line 12, ../../../../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
+    /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
     .l-region--navigation:after {
       content: " ";
       display: block;
